# pro-motion-ng-plugin-template

./: CMakeLists.txt  LICENSE  PluginInterface.def  README.md
src/: CMakeLists.txt  PluginInterface.cpp  PluginInterface.h
